# fs-schema-validator

./: .envrc  .gitignore  flake.nix  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
examples/: asset-1-bar.glb  asset.glb  complex-schema.yaml  corrupted-asset.glb  info.json  schema.yaml
fs_schema_validator/: __init__.py  __main__.py  report.py  utils.py
fs_schema_validator/evaluator/: __init__.py  errors.py  parser.py  values.py
fs_schema_validator/schemas/: file.py  gltf.py  image.py  json.py  png.py  zip.py
fs_schema_validator/string_expander/: __init__.py  errors.py  parser.py  values.py
tests/: test_file.py  test_gltf.py  test_image.py  test_json.py  test_schema.py  test_zip.py
tests/evaluator/: test_expander.py  test_expression.py  test_parser.py  test_values.py
tests/fixtures/: corrupted.glb  corrupted.gltf  image.avif  image.tif
tests/string_evaluator/: test_parser.py  test_values.py
tests/string_expander/: test_expander.py  test_parser.py  test_values.py
