[tool.poetry]
name = "fs-schema-validator"
version = "0.1.0"
description = ""
authors = ["Federico Ravasio <fr@nablaflow.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

click = "~8.1"
parsita = "~1.7"
pillow = "~11.1"
pillow-avif-plugin = "^1.4.6"
pydantic = "~2.10"
pygltflib = "~1.16"
pyyaml = "~6.0"
sortedcontainers = "~2.4"
svglib = "~1.5"

[tool.poetry.group.dev.dependencies]
deptry = "^0.21.2"
mypy = "~1.14"
orjson = "~3.10"
pytest = "~8.3"
rich = "~13.9"
ruff = "~0.8.5"
types-pyyaml = "~6.0.12"

[tool.poetry.scripts]
validate_schema = 'fs_schema_validator.__main__:validate'

[tool.pytest.ini_options]
addopts = "-vv"
pythonpath = "."

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "ARG",
  "ASYNC",
  "B",
  "C",
  "C4",
  "C90",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FA",
  "FURB",
  "I",
  "ICN",
  "INP",
  "ISC",
  "LOG",
  "N",
  "NPY",
  "PD",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "R",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLOT",
  "T20",
  "TC",
  "TID",
  "UP",
  "W",
]
ignore = [
  "C408",
  "C901",
  "E501",
  "ISC001",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR2004",
  "S101",
  "S603",
  "S607",
  "SIM108",
  "TC001",
  "TC002",
  "TC003",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = 'silent'
pretty = true
no_implicit_reexport = true
show_error_codes = true
strict_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "parsita",
  "pillow_avif",
  "pygltflib",
  "sortedcontainers",
  "svglib",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
