[project]
name = "fs-schema-validator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "click ~=8.3",
  "parsita ~=1.7",
  "pillow ~=11.3.0",
  "pillow-avif-plugin ~=1.5.2",
  "pydantic ~=2.12",
  "pygltflib ~=1.16",
  "pyyaml ~=6.0",
  "sortedcontainers ~=2.4",
  "svglib ~=1.6",
]

[dependency-groups]
dev = [
  "deptry ~=0.23.1",
  "mypy ~=1.18",
  "orjson ~=3.11",
  "pytest ~=8.4",
  "rich ~=14.1",
  "ruff ~=0.14.0",
  "types-pyyaml ~=6.0.12",
]

[project.scripts]
validate_schema = 'fs_schema_validator.__main__:validate'

[build-system]
requires = ["uv_build >=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fs_schema_validator"
module-root = ""

[tool.pytest.ini_options]
addopts = "-vv"
pythonpath = "."

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "ARG",
  "ASYNC",
  "B",
  "C",
  "C4",
  "C90",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FA",
  "FURB",
  "I",
  "ICN",
  "INP",
  "ISC",
  "LOG",
  "N",
  "NPY",
  "PD",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "R",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLOT",
  "T20",
  "TC",
  "TID",
  "UP",
  "W",
]
ignore = [
  "C408",
  "C901",
  "E501",
  "ISC001",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR2004",
  "S101",
  "S603",
  "S607",
  "SIM108",
  "TC001",
  "TC002",
  "TC003",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = 'silent'
pretty = true
no_implicit_reexport = true
show_error_codes = true
strict = true
strict_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "parsita",
  "pillow_avif",
  "pygltflib",
  "sortedcontainers",
  "svglib",
]
ignore_missing_imports = true

# [build-system]
# requires = ["uv_build >=0.8.0,<0.9.0"]
# build-backend = "uv_build"
